@@ -1,4 +1,4 @@
-/* Generated by cmdline.mini.sh on Thu Jan 20 12:56:26 CET 2011 */
+/* Generated by cmdline.mini.sh on Thu Jan 27 09:54:31 CET 2011 */
 #define OPT_fg_type 0
 static const char OPT_fg_name[] = "fg";
 #define OPT_debug_type 1
@@ -339,9 +339,11 @@ static const char OPT_kname_name[] = "kname";
 static const char OPT_moddir_name[] = "moddir";
 #define OPT_module_type 169
 static const char OPT_module_name[] = "module";
-#define OPT_version_type 170
+#define OPT_dhcpopt_type 170
+static const char OPT_dhcpopt_name[] = "dhcpopt";
+#define OPT_version_type 171
 static const char OPT_version_name[] = "version";
-#define OPT_help_type 171
+#define OPT_help_type 172
 static const char OPT_help_name[] = "help";
 #define OPT_idx_f 0
 #define OPT_fg_set offsetof(struct gengetopt_args_info,fg_flag), -1, offsetof(struct gengetopt_args_info,fg_given)
@@ -519,10 +521,11 @@ static const char OPT_help_name[] = "help";
 #define OPT_kname_set offsetof(struct gengetopt_args_info,kname_arg), offsetof(struct gengetopt_args_info,kname_orig), offsetof(struct gengetopt_args_info,kname_given)
 #define OPT_moddir_set offsetof(struct gengetopt_args_info,moddir_arg), offsetof(struct gengetopt_args_info,moddir_orig), offsetof(struct gengetopt_args_info,moddir_given)
 #define OPT_module_set offsetof(struct gengetopt_args_info,module_arg), offsetof(struct gengetopt_args_info,module_orig), offsetof(struct gengetopt_args_info,module_given)
+#define OPT_dhcpopt_set offsetof(struct gengetopt_args_info,dhcpopt_arg), offsetof(struct gengetopt_args_info,dhcpopt_orig), offsetof(struct gengetopt_args_info,dhcpopt_given)
 #define OPT_version_set -1, -1, offsetof(struct gengetopt_args_info,version_given)
-#define OPT_idx_V 170
+#define OPT_idx_V 171
 #define OPT_help_set -1, -1, offsetof(struct gengetopt_args_info,help_given)
-#define OPT_idx_h 171
+#define OPT_idx_h 172
 struct opt_def_t opts[] = {
   { OPT_flag, OPT_fg_name, 0, OPT_fg_set },
   { OPT_flag, OPT_debug_name, 0, OPT_debug_set },
@@ -694,6 +697,7 @@ struct opt_def_t opts[] = {
   { OPT_string, OPT_kname_name, 0, OPT_kname_set },
   { OPT_string, OPT_moddir_name, 0, OPT_moddir_set },
   { OPT_string, OPT_module_name, 1, OPT_module_set },
+  { OPT_string, OPT_dhcpopt_name, 1, OPT_dhcpopt_set },
   { OPT_flag, OPT_version_name, 0, OPT_version_set },
   { OPT_flag, OPT_help_name, 0, OPT_help_set },
 };
@@ -869,6 +873,7 @@ static struct option long_options[] = {
   { OPT_kname_name, 1, NULL, 0 },
   { OPT_moddir_name, 1, NULL, 0 },
   { OPT_module_name, 1, NULL, 0 },
+  { OPT_dhcpopt_name, 1, NULL, 0 },
   { OPT_version_name, 0, NULL, 'V' },
   { OPT_help_name, 0, NULL, 'h' },
   { 0, 0, 0, 0 }
